syntax = "proto3";
package phonebook;

option cpp_use_lists = true;

message PhoneNumber
{
    string number = 1;
    bool type = 2;
}

message Person
{
    string name = 1;
    int32 id = 2;
    string email = 3 [name = "e-mail"];
    repeated PhoneNumber phones = 4;
    int32 last_updated = 5;
}

message AddressBook
{
    Person owner = 1;
    repeated Person people = 2;
}

