syntax = "proto3";
package options;

option obfuscate_strings = true;
option number_names = true;

message Cake
{
    string name = 1;
    int32 weight = 2;
    string flavor = 3 [transient = true];
    repeated string ingredients = 4;
}
